--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version '1.0'
 
 sourceCompatibility = 1.8
 
+
 repositories {
     mavenCentral()
 }
@@ -15,4 +16,5 @@ dependencies {
     testImplementation 'com.codeborne:selenide:5.5.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    compile 'io.github.cdimascio:java-dotenv:5.1.3'
 }
